src/test/deca/context/invalid/created/instanceof/instanceof_true_A.deca
// Description :
//    test instanceof entre un true et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10 : (3.40) Type gauche : <>, attendu : 'class' ou 'null',  Type droit : <>, attendu : 'class'
class A{}
{
A a;
boolean c = true instanceof A;
}
